# bevy_simple_compute

./: Cargo.toml  README.md
assets/shaders/: n-body_interact.wgsl
examples/: boids.rs  multi_pass.rs  n-body.rs  one_shot.rs  simple.rs
examples/boids/: main.rs  worker.rs
examples/game_of_life/: bind_groups.rs  main.rs  worker.rs
src/: lib.rs  pipeline_cache.rs  plugin.rs  traits.rs  worker.rs  worker_builder.rs
tests/: simple_test.rs
tests/common/: mod.rs
