[package]
name = "bevy_simple_compute"
version = "0.15.1"
authors = ["Kjolnyr <kjolnyr@protonmail.com>", "dsenyushkindev <dsenyushkin.dev@gmail.com>"]
edition = "2021"
description = "App compute plugin for Bevy"
repository = "https://github.com/dsenyushkindev/bevy_simple_compute"
homepage = "https://github.com/dsenyushkindev/bevy_simple_compute"
documentation = "https://docs.rs/bevy_simple_compute"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["game-development"]


[dependencies]
bevy = "0.15.1"
parking_lot = "0.12.1"
wgpu = { version = "23.0.1" }
codespan-reporting = "0.11.1"
futures-lite = "2.6.0"
bytemuck = "1.4.0"
naga = { version = "23.1.0", features = ["wgsl-in"] }
naga_oil = "0.16.0"

[dev-dependencies]
rand = "0.9.0"
bevy = { version = "0.15.1", features = ["wayland"] }

[[example]]
name = "simple"

[[example]]
name = "multi_pass"

[[example]]
name = "one_shot"

[[example]]
name = "boids"
